feat(api): search client_repos endpoint has query param 'refresh_rate' for when each repository should be refreshed with the server at least once.
